** For a while this is going to ONLY INCLUDE BREAKING CHANGES.

2026/02/02:
- TestEngine: can access TabBars in dock nodes or menu layer.
- TestEngine: fixes to aim at tab items while another item is active
  (e.g. for drag and drop), requires latest (1.92.6) core library.
- TestEngine: improve how item visibility is evaluated when nested
  PushClipRect() are used.

2026/01/26:
- TestEngine: rework logic for aiming at an item in a covered window to
  move covering windows if the target window cannot be brought to front.
  In particular, it fixes issues when programmatic code is stealing focus.
- TestEngine: fixed a bug where some actions aiming at a window behind
  a modal would erroneously succeed.
- TestEngine: fixed using WindowMove() with ImGuiTestOpFlags_NoFocusWindow
  (not an action that is possible by a real end-user).
- TestEngine: fixed an issue with single-axis WindowResize() on small windows
  where corner resize grip can overlap center of side borders.
- TestEngine: UI: added a link with tips/help at the bottom of error log.
- TestSuite: make imgui_test_suite application DPI aware and load scaled fonts.
  Made various/misc fixes to tests to ensure test suite runs with different
  font sizes.

2025/12/19:
- TestEngine: ctx->WindowResize(): passing 0.0f keep existing size of for
  a given axis, vs passing < 0.0f auto-resize for this axis.
- TestEngine: UI: clicking "Run" again stop current test.

2025/12/11:
- TestEngine: fixes for changes in 1.92.6.
- TestEngine: added TableSetColumnEnabled() by column index helper.

2025/10/29:
- TestEngine: fixed an issue when mouse position after running a series of test
  may be temporarily reverted to the one before starting the test. This was not
  noticeable on backends which would keep submitting latest mouse position.

2025/10/08:
- TestEngine: added TeardownFunc facility to setup a driving function which
  will run even if the test fails. (#82)